force-app/main/default/objects/BMCServiceDesk__SysQVFormatCondition__c/BMCServiceDesk__SysQVFormatCondition__c.object-meta.xml
<CustomObject>
    <description>This object allows you to store data for the formatting conditions of QuickViews.</description>
    <label>Quickview Format Condition</label>
    <nameField>
        <displayFormat>FormatCondition-{000}</displayFormat>
        <label>SysQVFormatCondition Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SysQVFormatConditions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>