force-app/main/default/objects/BMCServiceDesk__SysQVFormatCondition__c/fields/BMCServiceDesk__SysQVFormatRule__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SysQVFormatRule__c</fullName>
    <label>FKQVFormatRule</label>
    <referenceTo>BMCServiceDesk__SysQVFormatRule__c</referenceTo>
    <relationshipLabel>SysQVFormatConditions</relationshipLabel>
    <relationshipName>SysQVFormatConditions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>