force-app/main/default/objects/BMCServiceDesk__SysQVFormatCondition__c/fields/BMCServiceDesk__SysQVLogicalOperator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SysQVLogicalOperator__c</fullName>
    <label>SysQVLogicalOperator</label>
    <length>5</length>
    <type>Text</type>
</CustomField>