force-app/main/default/objects/BMCServiceDesk__SysQVFormatCondition__c/fields/BMCServiceDesk__SysQVOperator__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__SysQVOperator__c</fullName>
    <label>SysQVOperator</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>