force-app/main/default/objects/BMCServiceDesk__SysQVFormatCondition__c/fields/BMCServiceDesk__Values__c.field-meta.xml
<CustomField>
    <fullName>BMCServiceDesk__Values__c</fullName>
    <label>Values</label>
    <length>100</length>
    <required>true</required>
    <type>Text</type>
</CustomField>